[package]
name = "rerun_except"
description = "Rerun a cargo build except when specified files are changed"
repository = "https://github.com/softdevteam/rerun_except/"
version = "0.1.0"
authors = ["Laurence Tratt <laurie@tratt.net>"]
readme = "README.md"
# This should be "Apache-2.0 OR MIT OR UPL-1.0" but crates.io doesn't know about
# UPL-1.0.
license = "Apache-2.0 OR MIT"
categories = ["development-tools"]
edition = "2018"

[dependencies]
ignore = "0.4"
